Add support for JMnedict

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,6 @@
+#####################################################
+# settings for JMdict (english/japanese dictionary) #
+#####################################################
 [jmdict]
 
 # enable/disable the use of JMdict, default true
@@ -10,6 +13,26 @@ enable = true
 color = true
 
 # show additional information (cross-references, restricted meanings, …), default true
+verbose = true
+
+# show unicode symbols instead of text to mark extra information, default false
+symbols = false
+
+################################################################
+# settings for JMnedict (names of places, works, companies, …) #
+################################################################
+[jmnedict]
+
+# enable/disable the use of JMnedict, default false
+enable = true
+
+# specify the location of JMnedict, default is /usr/share/termjiten/JMnedict.xml
+# path = path/to/JMnedict.xml
+
+# use ANSI escape sequences for colored output, default true
+color = true
+
+# show additional information (cross-references and types), default true
 verbose = true
 
 # show unicode symbols instead of text to mark extra information, default false
