Make colors configurable

--- a/termjiten.ini
+++ b/termjiten.ini
@@ -38,3 +38,45 @@ verbose = true
 # show unicode symbols instead of text to mark extra information, default false
 symbols = false
 
+#################################
+# settings for KANJIDIC (kanji) #
+#################################
+[kanjidic]
+
+# enable/disable the use of KANJIDIC, default true
+enable = true
+
+# specify the location of KANJIDIC, default is /usr/share/termjiten/JMnedict.xml
+# path = path/to/kanjidic2.xml
+
+# use ANSI escape sequences for colored output, default true
+color = true
+
+# show additional information (cross-references and types), default true
+verbose = true
+
+# show unicode symbols instead of text to mark extra information, default false
+symbols = false
+
+##################################
+# colors (ANSI escape sequences) #
+##################################
+[colors]
+
+# the colors are specified as ANSI escape sequences (the \e is added by the program)
+# https://en.wikipedia.org/wiki/ANSI_escape_code
+
+# color for kanji
+kanji = [91m
+
+# color for kana
+kana = [94m
+
+# color for translations
+trans = [0m
+
+# color for additional information
+extra = [92m
+
+# reset to default (you should not have to change this)
+# reset = [0m
