Add languages option

--- a/termjiten.ini
+++ b/termjiten.ini
@@ -18,6 +18,10 @@ verbose = true
 # show unicode symbols instead of text to mark extra information, default false
 symbols = false
 
+# include words from the specified language in the search and output (ISO 639-2 codes)
+# the languages in this example are all languages with more than 1000 entries, sorted by number of entries
+# languages = ger,dut,hun,rus,spa,fre,slv,swe
+
 ################################################################
 # settings for JMnedict (names of places, works, companies, …) #
 ################################################################
@@ -38,6 +42,8 @@ verbose = true
 # show unicode symbols instead of text to mark extra information, default false
 symbols = false
 
+# JMnedict supports multiple languages in the document structure, but there don't seem any entries that make use of this. Therefore the languages option is not supported for JMnedict.
+
 #################################
 # settings for KANJIDIC (kanji) #
 #################################
@@ -57,6 +63,10 @@ verbose = true
 
 # show unicode symbols instead of text to mark extra information, default false
 symbols = false
+
+# include words from the specified language in the search and output (ISO 639-1 codes)
+# the languages in this example are all languages, sorted by number of entries
+# languages = es,fr,pt
 
 ##################################
 # colors (ANSI escape sequences) #
